# advent-of-code

./: .gitignore
2023/day-01/: Cargo.toml
2023/day-03/: Cargo.toml
2023/day-04/: Cargo.toml
2023/day-05/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-10/: Cargo.toml
2023/day-10/src/: lib.rs
2023/day-11/: Cargo.toml
2023/day-18/: Cargo.toml
2023/day-23/: Cargo.toml
2024/: README.md
2024/day1/: main.go  main_test.go
2024/day10/: main.go  main_test.go
2024/day11/: main.go  main_test.go
2024/day12/: main.go  main_test.go
2024/day2/: main.go  main_test.go  tests2.txt
2024/day3/: main.go  main_test.go
2024/day4/: main.go  main_test.go
2024/day5/: go.mod  main.go  main_test.go  simple.gv
2024/day6/: main.go  main_test.go
2024/day7/: main.go  main_test.go
2024/day8/: main.go  main_test.go
2024/day9/: main.go  main_test.go
2024/template/: main.go  main_test.go
day-01/src/: main.rs
day-02/src/: main.rs
day-03/: Cargo.toml
day-03/benches/: part2.rs
day-03/src/: main.rs
day-04/: Cargo.toml
day-04/src/: lib.rs  main.rs
day-05/: Cargo.toml
day-05/src/: lib.rs  main.rs
day-06/src/: lib.rs  main.rs
day-07/: Cargo.toml
day-07/benches/: day7.rs
day-07/src/: lib.rs  main.rs
day-08/: Cargo.toml
day-08/benches/: day8.rs
day-08/src/: lib.rs  main.rs
day-09/: Cargo.toml
day-09/benches/: aoc.rs
day-09/src/: lib.rs  main.rs
day-10/: Cargo.toml
day-10/benches/: aoc.rs
day-10/src/: lib.rs  main.rs
day-11/src/: lib.rs
day-13/benches/: aoc.rs
day-17/: Cargo.toml
template/: Cargo.toml
(+32 files in other folders)
