[package]
name = "day-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
petgraph = "0.6.4"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"

[[bench]]
name = "aoc"
harness = false
