[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
itertools = "0.12.0"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"

[[bench]]
name = "aoc"
harness = false
